--- a/bacula-server/conf/11/postgresql/bacula-dir.conf
+++ b/bacula-server/conf/11/postgresql/bacula-dir.conf
@@ -208,7 +208,12 @@ Storage {                             # diz ao Director onde está o SD
 # Definition of file Virtual Autochanger device
 Autochanger {
   Name = File1
-# Do not use "localhost" here
+  Address = localhost
+  SDPort = 9103
+  Password = "SenhaForte123!"
+  Device = FileStorage
+  Media Type = File1
+  Maximum Concurrent Jobs = 10
   Address = localhost                # N.B. Use a fully qualified name here
   SDPort = 9103
   Password = "@SD_Password@"
