--- a/bacula-server/conf/bconsole.conf
+++ b/bacula-server/conf/bconsole.conf
@@ -9,5 +9,5 @@ Director {
   Name = bacula-dir
   DIRport = 9101
   address = localhost
-  Password = "@Console_Password@"
+  Password = "SenhaForte123!"
 }
