--- a/bacula-server/conf/11/postgresql/bacula-dir.conf
+++ b/bacula-server/conf/11/postgresql/bacula-dir.conf
@@ -107,6 +107,7 @@ FileSet {
   Include {
     Options {
       signature = MD5
+      compression = GZIP
     }
 #
 #  Put your list of files here, preceded by 'File =', one per line
@@ -123,6 +124,10 @@ FileSet {
 #    disk storage during initial testing.
 #
     File = /opt/bacula/etc
+    File = /data
+    File = /mnt/bacula
+    # MinIO data is now mounted at /minio_data in the bacula-server container
+    File = /minio_data
   }
 
 #
@@ -233,7 +238,6 @@ Autochanger {
 #  Device = LTO-4                     # must be same as Device in Storage daemon
 #  Media Type = LTO-4                 # must be same as MediaType in Storage daemon
 #  Autochanger = LTO-4                # enable for autochanger device
-#  Maximum Concurrent Jobs = 10
 #}
 
 # Generic catalog service
@@ -324,4 +328,102 @@ Console {
   Name = bacula-mon
   Password = "@DIR_Mon@"
   CommandACL = status, .status
+}
+
+# MinIO Backup Job
+Job {
+  Name = "MinIOBackup"
+  Type = Backup
+  Level = Full
+  Client = bacula-fd
+  FileSet = "MinIOSet"
+  Schedule = "WeeklyCycle"
+  Storage = File1
+  Messages = Standard
+  Pool = File
+  Priority = 10
+  Write Bootstrap = "/opt/bacula/working/backup.bsr"
+}
+
+# MinIO FileSet
+FileSet {
+  Name = "MinIOSet"
+  Include {
+    Options {
+      signature = MD5
+      compression = GZIP
+    }
+    File = /data/minio  # MinIO data directory
+  }
+  Exclude {
+    File = /data/minio/lost+found
+  }
+}
+
+FileSet {
+  Name = "MinIO Set"
+  Include {
+    Options {
+      signature = MD5
+      compression = GZIP
+    }
+    File = "/minio_data/testbucket"
+  }
+}
+
+Job {
+  Name = "MinIO-Backup"
+  Type = Backup
+  Level = Incremental
+  Client = bacula-fd
+  FileSet = "MinIO Set"
+  Schedule = "WeeklyCycle"
+  Storage = File1
+  Messages = Standard
+  Pool = File
+  Priority = 10
+  Write Bootstrap = "/opt/bacula/working/%c.bsr"
+}
+
+# Standard Restore template
+Job {
+  Name = "MinIO-Restore"
+  Type = Restore
+  Client = bacula-fd
+  FileSet = "MinIO Set"
+  Storage = File1
+  Pool = File
+  Messages = Standard
+  Where = /minio_restore
+}
+
+# MinIO backup job definition
+Job {
+  Name = "MinIOBackup"
+  JobDefs = "DefaultJob"
+  FileSet = "MinIOSet"
+  Level = Full
+  Schedule = "MinIOSchedule"
+  Priority = 8
+}
+
+# MinIO backup schedule - runs every day at midnight
+Schedule {
+  Name = "MinIOSchedule"
+  Run = Full daily at 00:00
+}
+
+# MinIO FileSet definition
+FileSet {
+  Name = "MinIOSet"
+  Include {
+    Options {
+      signature = MD5
+      compression = GZIP
+    }
+    File = /minio_data
+  }
+  Exclude {
+    File = /minio_data/lost+found
+  }
 }
