--- a/docker/app/package.json
+++ b/docker/app/package.json
@@ -6,6 +6,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "minio": "^8.0.5",
+    "multer": "^2.0.0"
   }
 }
