--- a/docker/app/package.json
+++ b/docker/app/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "minio": "^8.0.5",
-    "multer": "^2.0.0"
+    "multer": "^2.0.0",
+    "prom-client": "^15.1.0"
   }
 }
